# AnnotationLidar

./: AnnotationImageLidar.pro  CMakeLists.txt  README.md  context.cpp  context.h  loader.cpp  loader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  poses.h  realobject.cpp  realobject.h  realobjectinformationwidget.cpp  realobjectinformationwidget.h  xmlmanager.cpp  xmlmanager.h
